# Cost-Optimization

./: CMakeLists.txt  README.md  main.cpp
Domain/: Cheltuiala.cpp  Cheltuiala.h  Validator.h  Vector.h
Repository/: Repository.cpp  Repository.h
Service/: CheltuialaService.cpp  CheltuialaService.h
Tests/: TestAll.h  TestEntityRepo.cpp  TestEntityRepo.h  TestsService.cpp  TestsService.h
UI/: Console.cpp  Console.h
